syntax = "proto3";
option java_multiple_files = true;
package com.beratyesbek.grpc;

service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse);
}

message DiscountRequest {
  string code = 1;
  float price = 2;
  int64 internalId = 3;
  string bookName = 4;
}

message DiscountResponse {
  string code = 1;
  float newPrice = 2;
  float oldPrice = 3;
  Response response = 5;
}

message Response {
  bool statusCode = 1;
  string message = 2;
}